# adata_ui

./: .pre-commit-config.yaml  Makefile  README.md  data_utils.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  release.yml
.nicegui/: storage-general.json
adata_ui/: __init__.py
adata_ui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adata_ui/components/: concept_table.py
adata_ui/pages/: concept_page.py  market_page.py  stock_page.py
adata_ui/utils/: app_config.py  data_loader.py
